# minECS

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  compile_commands.json
cmake/: minECSConfig.cmake.in
examples/: setup.cpp
include/minECS/: minECS.hpp
include/minECS/Internals/: Archetype.hpp  BitsetTree.hpp  ECS.hpp  ECSDescriptor.hpp  Entity.hpp  EntityView.hpp  Result.hpp  SparseSet.hpp  Traits.hpp
include/minecs/: minecs.hpp
include/minecs/inline/: archetype.inl  bitset_tree.inl  ecs.inl  entity_view.inl  sparse_set.inl
include/minecs/internals/: archetype.hpp  bitset_tree.hpp  descriptor.hpp  ecs.hpp  ecs_descriptor.hpp  entity.hpp  entity_view.hpp  sparse_set.hpp  traits.hpp
